--- a/index.html
+++ b/index.html
@@ -1,102 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>
-		Журнал Дилетант
-	</title>
-	<style>
-		.first {
-			padding-top: 60px;
-			padding-left: 35%;
-			padding-right: 24%
-		}
-		.second {
-			padding-top: 10px;
-			padding-bottom: 60px;
-		}
-		.two {
-			margin-left: 165px;
-		}
-		.one {
-			margin-left: 30px;
-		}
-		.shapka {
-			margin-top: 50px;
-			margin-left: 30px;
-		}
-		.back {
-			background: Grey
-		}
-		.barcelona {
-			margin-top: 0%;
-		}
-		.resp {
-			margin-bottom: 0%;
-		}
-		.parone {
-			margin-bottom: 0%;
-		}
-		.partwo {
-			margin-top: 0%;
-			margin-bottom: 0%;
-			text-indent: 20px;
-		}
-		.parthree {
-			margin-top: 0%;
-			text-indent: 20px;
-		}
-		.podval {
-			background: White;
-		}
-		.g {
-			float: left;
-			height: 90px;
-			font-size: 100px;
-	</style>
+	<title>Журнал Дилетант</title>
 </head>
 <body>
 	<header>
-	   <small class="one"><font size="4" face="Corbel">2</font></small>
-	   <small class="two"><font size="3" face="Corbel">КАДР</font></small>
+	   <small class="one">2</small>
+	   <small class="two">КАДР</small>
   </header>
 	<section class="shapka">
 		<p>
-			<i><font color="LightPink">Рубрику ведет Андрей Позняков</font></i>
+			<i>Рубрику ведет Андрей Позняков</i>
 		</p>
 	</section>
 	<div class="back">
 	<section>
 		<article class="first">
 			<h1 class="resp">
-				<font color="white" face="Corbel" font size="6">Республиканцы<br>
-				за конной баррикадой</font>
+				Республиканцы<br>
+				за конной баррикадой
 			</h1>
 			<p class="barcelona">
-				<font color="white" face="Corbel" font size="6">Барселона, Испания, июль 1936 года</font>
+				Барселона, Испания, июль 1936 года
 			</p>
 			<aside class="second">
 					<p class="parone">
-						<b><font class="g" face="Century" color="lightpink">Г</font></b>
-						<font color="white" face="Corbel"> <br>
+						<b>Г</b>
 							ражданская война в Испании, как известно, началась<br>
 						с серии вооруженных мятежей против республиканского<br>
 						правительства. Выступления путчистов в июле 1936 года<br>
 						охватили многие города страны, но далеко не везде им<br>
 						удалось закрепиться. Барселона тогда оказалась одним<br>
-						из оплотов республиканского сопротивления.</font>
+						из оплотов республиканского сопротивления.
 					</p>
 					<p class="partwo">
-						<font color="white" face="Corbel">Эту фотографию относят к самому началу боевых действий в сто-<br>
+						Эту фотографию относят к самому началу боевых действий в сто-<br>
 							лице Каталонии. 20 июля солдаты под предводительством генерала<br>
 							Годеда захватили центр города. С окраин сразу стали стягиваться<br>
 							отряды сторонников республики - рабочие захватили военные<br>
 							склады, вооружились и фактически осадили центр города. Весь день<br>
 							на улицах шли бои, а к вечеру Годед был вынужден вернуть войска<br>
 							в казармы. Мятежного генерала затем захватили в плен и судили.<br>
-						Промышленная Каталония осталась верна Республике.</font>
+						Промышленная Каталония осталась верна Республике.
 					</p>
 					<p class="parthree">
-						<font color="white" face="Corbel">Известный каталонский фотограф Агусти Сентеллес оставил<br>
+						Известный каталонский фотограф Агусти Сентеллес оставил<br>
 							множество свидетельств об этом этапе гражданской войны. Фото-<br>
 							графия "конной баррикады" считается одним из символов проти-<br>
 							востояния республиканцев. Она была сделана в первые часы после<br>
