--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<style media="all">
 			@import url(style.css);
 		</style>
+		<link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Pacifico&display=swap" rel="stylesheet">
   </head>
   <body>
 	  <header class="header">
