Подключение стилей через link

--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
   <head>
 	  <title>Журнал Дилетант</title>
-		<style media="all">
-			@import url(style.css);
-		</style>
+		<link rel="stylesheet" href="./style.css">
 		<link href="https://fonts.googleapis.com/css2?family=Comfortaa&family=Pacifico&display=swap" rel="stylesheet">
   </head>
   <body>
